[package]
name = "dlms_cosem"
version = "0.2.0"
edition = "2018"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A `no_std` library for parsing DLMS/COSEM messages."
documentation = "https://docs.rs/dlms_cosem"
repository = "https://github.com/reitermarkus/dlms-cosem-rs"
homepage = "https://github.com/reitermarkus/dlms-cosem-rs"

[dependencies]
aes = "0.8.0"
aes-gcm = "0.9.0"
cipher = "0.4.0"
derive-try-from-primitive = "1.0"
mbusparse = { version = "0.1", default-features = false, optional = true }
hdlcparse = { git = "https://github.com/leifhelm/hdlcparse", default-features = false, optional = true }
nom = { version = "7.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std", "mbusparse", "hdlcparse"]
std = ["serde?/std", "nom/std"]
